fix style: now aligned vertically on mac chrome and safari

--- a/src/dyna-combobox.less
+++ b/src/dyna-combobox.less
@@ -32,6 +32,33 @@
 		}
 	}
 
+	&.is-mac-chrome-safari.dyna-ui-field-wrapper.dyna-ui-field-wrapper--size- {
+		&XSMALL {
+			select {
+				padding: 0;
+				margin: 9px 0;
+			}
+		}
+		&SMALL {
+			select {
+				padding: 0;
+				margin: 9px 0;
+			}
+		}
+		&MEDIUM {
+			select {
+				padding: 0;
+				margin: 16px 0;
+			}
+		}
+		&LARGE {
+			select {
+				padding: 0;
+				margin: 20px 0;
+			}
+		}
+	}
+
 	select {
 		border: 0;
 		cursor: pointer;
